--- a/quiz_files/main.css
+++ b/quiz_files/main.css
@@ -14,7 +14,7 @@ hr {
   margin: 20px auto; /* 上下の余白と中央寄せ */
 }
 
-.quiz-title {
+#logo-min {
   max-width: 200px;
 }
 
@@ -38,14 +38,14 @@ img {
   flex-direction: column;
   align-items: flex-start;
   text-align: left;
-  line-height: 1;
+  /* line-height: 1; */
 }
 .hint {
   cursor: pointer;
   padding: 5px 10px;
   /* border-left: 3px solid #007bff; */
   margin: 5px 0;
-  font-weight: bold;
+  text-decoration: underline; /* 下線を追加 */
 }
 .hint-content {
   display: none;
@@ -103,7 +103,7 @@ img {
   max-width: 240px;
 }
 
-button {
+#submitAnswer {
   background-color: #26125e;
   color: white;
   padding: 12px 24px;
@@ -115,6 +115,18 @@ button {
   width: auto;
   box-sizing: border-box;
 }
+
+#hintButton {
+  color: purple; /* 文字色を紫に設定 */
+  text-decoration: underline; /* 下線を追加 */
+  text-decoration-color: purple; /* 下線の色も紫に設定 */
+  background: none; /* 背景をなくす */
+  border: none; /* 枠をなくす */
+  padding: 0; /* 余計な余白を削除 */
+  font-size: 16px;
+  cursor: pointer;
+}
+
 
 button:hover {
   background-color: #5c4b8b;
@@ -206,6 +218,10 @@ button:disabled {
 .title_txt{
   font-size: 1.3rem;
   font-weight: bold;
+}
+
+.nekomata-p{
+  font-size: 1.1rem;
 }
 
 /* テキスト色 */
